# ai-cookbook

./: .gitignore
.github/workflows/: anthropic-webui.yaml  guardrails.yaml  python-tests.yaml
anthropic-webui/: README.md  docker-compose.yaml  justfile  pyproject.toml  requirements.txt
anthropic-webui/src/: app.py  chat.py  chat_test.py  service.py  service_test.py
anthropic-webui/testdata/: request.json
code-search/: Dockerfile  README.md  docker-compose.yaml
code-search/backend/: Dockerfile  docker-compose.yaml  file_fetch.py  justfile  requirements.txt  service.py
code-search/backend/src/: code_search.py  service.py
code-search/ingestion/: Dockerfile  docker-compose.yaml  justfile  requirements.txt  run.sh
code-search/ingestion/jobs/: code_index.py  code_split.py
code-search/ingestion/src/: code_embed.py  file_index.py
guardrails/: Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml  requirements.txt
guardrails/genai/: app.py  chat.py  chat_test.py  prompts.py  service.py
guardrails/src/: app.py  chat.py  chat_test.py  prompts.py  service.py
guardrails/testdata/: chat_bad_moderation.json  chat_bad_topic.json  chat_good.json
